# XROS

./: Cargo.toml  README.md  README_CN.md  XROS.code-workspace  pnpm-lock.yaml  pnpm-workspace.yaml
script/: xros.sh
xros/: Cargo.toml  build.rs
xros-contrib/easytier-ffi/: Cargo.toml  desktop.ini
xros-contrib/easytier-ffi/examples/: csharp.cs
xros-contrib/easytier-ffi/src/: lib.rs
xros-contrib/easytier-magisk/: README.md  action.sh  build.sh  customize.sh  desktop.ini  module.prop  service.sh  uninstall.sh  xros_core.sh
xros-gui/: README.md  package.json
xros-gui/locales/: en.yml
xros-gui/src/: App.vue  auto-imports.d.ts  main.ts
xros-gui/src-tauri/: Cargo.toml  tauri.conf.json
xros-gui/src-tauri/src/: lib.rs
xros-gui/src/components/: About.vue
xros-gui/src/composables/: mobile_vpn.ts  network.ts  tray.ts
xros-gui/src/pages/: index.vue
xros-gui/src/stores/: network.ts
xros-rpc-build/: Cargo.toml  README.md
xros-rpc-build/src/: lib.rs
xros-web/: Cargo.toml  build.rs
xros-web/frontend/: index.html  package.json
xros-web/frontend-lib/: package.json  vite.config.ts
xros-web/frontend/src/: App.vue  main.ts
xros-web/locales/: app.yml
xros-web/src/: main.rs
xros-web/src/client_manager/: mod.rs  session.rs
xros-web/src/db/: mod.rs
xros-web/src/restful/: auth.rs  mod.rs  network.rs
xros-web/src/web/: mod.rs
xros/locales/: app.yml
xros/src/: launcher.rs  lib.rs  utils.rs  xros-cli.rs  xros-core.rs
xros/src/arch/: windows.rs
xros/src/common/: config.rs  constants.rs  dns.rs  stun.rs
xros/src/connector/: dns_connector.rs  (+1 more)
(+26 files in other folders)
