[package]
name = "xros-rpc-build"
description = "Protobuf RPC Service Generator for XROS"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/XROS/XROS"
repository = "https://github.com/XROS/XROS"
authors = ["kkrainbow"]
keywords = ["vpn", "p2p", "network", "xros"]
categories = ["network-programming", "command-line-utilities"]
rust-version = "1.84.0"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
heck = "0.5"
prost-build = "0.13"

[features]
default = []
internal-namespace = []
